styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Google Sans", sans-serif;
  background-color: #121212;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr;
}

img {
  display: block;
  max-width: 100%;
}

h1 {
  font-size: 2rem;
  color: #fff;
}

input,
button {
  font-family: inherit;
  font-size: inherit;
}

button {
  cursor: pointer;
}

header {
  background-color: #000;
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.8)), url("images/header-bg.jpg");
  background-size: cover;
  padding: 4.5em 2.5em;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header a {
  font-weight: 600;
  text-decoration: none;
  color: #fff;
  font-size: 0.9rem;
}

header a:hover,
header a:focus {
  text-decoration: underline;
  color: #fce405;
}

main {
  padding: 0 2.5em;
  display: grid;
  grid-template-rows: 1fr;
  position: relative;
}

form {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  background-image: url("images/search-icon.svg");
  background-repeat: no-repeat;
  background-size: 1rem;
  background-position: 1em;
  padding-left: 2.8em;
  background-color: #2e2e2f;
  display: flex;
  border-radius: 0.5em;
  width: 85%;
}

form input {
  border: 0;
  background-color: #2e2e2f;
  font-size: 0.9em;
  flex: 1;
  color: #a5a5a5;
  padding-right: 1em;
}

form input:focus {
  outline: none;
}

form:focus-within {
  border: 1px solid #d5d5d5;
}

form input::placeholder {
  color: #a5a5a5;
}

form button {
  font-size: 0.9em;
  background-color: #4b4b4b;
  border: 0;
  flex-basis: 25%;
  color: #fff;
  padding: 0.9em 0;
  border-top-right-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
  transition: all 0.2s ease;
}

form button:hover,
form button:focus {
  outline: none;
  background-color: #fce405;
  color: #000;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.result-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.result-section-title {
  color: #2e2e2f;
  font-size: 1.125rem;
  font-weight: 700;
  margin-top: 0.5em;
}

.status-msg {
  color: #787878;
  font-size: 1.2rem;
  font-weight: 800;
  text-align: center;
}

.status-msg-error {
  padding: 0 3em;
}

.results-appeared {
  padding-top: 2.5em;
}

/* RESULT SECTION WITH MOVIES */
.movie-card {
  color: white;
  display: flex;
  align-items: center;
  gap: 1.31em;
  border-bottom: 1px solid #2c2c2c;
  padding: 1.5em 0;
}

.movie-card:last-child {
  border-bottom: none;
}

.card-watchlist {
  border-bottom: 1.5px solid #e5e7eb;
  padding: 2em 0;
}

.movie-poster {
  width: 25%;
}

.movie-poster img {
  border-radius: 4px;
}

.movie-content {
  width: 75%;
}

.movie-header {
  display: flex;
  align-items: center;
  gap: 0.8em;
}

.movie-header h2 {
  font-size: 1.125rem;
  font-weight: 400;
}

.rating-box {
  display: flex;
  align-items: center;
  gap: 0.3em;
}

.rating-box .rating {
  font-size: 0.75rem;
  font-weight: 400;
}

.movie-features {
  margin: 0.8em 0;
  font-size: 0.75rem;
  display: flex;
  align-items: center;
  gap: 1.125em;
}

.action-btn,
.search-link {
  display: flex;
  align-items: center;
  gap: 0.4em;
  background-color: transparent;
  border: 0;
  color: #fff;
}

.search-link {
  margin-top: 1em;
  text-decoration: none;
}

.action-btn:hover,
.action-btn:focus,
.search-link:hover,
.search-link:focus {
  color: #fce405;
  text-decoration: underline;
}

.action-btn img,
.search-link img {
  width: 1.3em;
}

.movie-description {
  color: #a5a5a5;
  font-size: 0.875rem;
  line-height: 1.4;
}

.no-pointer-events {
  pointer-events: none;
}

.watchlist-status {
  display: flex;
  align-items: center;
  gap: 4px;
}

.watchlist-status img {
  width: 20px;
}

.read-more-btn {
  color: #fff;
  background-color: transparent;
  border: none;
}

.read-more-btn:hover,
.read-more-btn:focus {
  color: #fce405;
}

@media (max-width: 430px) {
  header {
    flex-direction: column;
    row-gap: 0.8em;
    padding: 4.5em 2.5em 4em;
  }

  form {
    background-image: none;
    padding-left: 1.2em;
  }

  .movie-card {
    flex-direction: column;
  }

  .movie-poster {
    width: 100%;
    height: 180px;
  }

  .movie-poster img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: top;
  }

  .movie-content {
    width: 100%;
  }
}

@media (min-width: 650px) {
  body {
    grid-template-columns: repeat(15, 1fr);
  }

  header,
  main {
    grid-column: 2/15;
  }
}

@media (min-width: 800px) {
  header,
  main {
    grid-column: 3/14;
  }
}

@media (min-width: 960px) {
  header,
  main {
    grid-column: 4/13;
  }
}

@media (min-width: 1330px) {
  header,
  main {
    grid-column: 5/12;
  }
}

